# cafe-orders

./: .env.example  Makefile  README.md  manage.py  pyproject.toml
cafe_orders/: asgi.py  settings.py  urls.py  wsgi.py
cafe_orders/api/: router.py  serializers.py  views.py
cafe_orders/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cafe_orders/orders/migrations/: 0001_initial.py  0002_alter_order_total_price.py
cafe_orders/templates/: base.html
cafe_orders/templates/orders/: order_confirm_delete.html  order_form.html  order_list.html  revenue_report.html
cafe_orders/tests/: test_orders.py
